--- a/.github/workflows/dist.yaml
+++ b/.github/workflows/dist.yaml
@@ -5,21 +5,14 @@ on:
       - main
       - beta
 jobs:
-  setup:
-    name: Setup environment
+  runTests:
+    name: Run tests suites, and upload coverage reports
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
       - run: npm ci --legacy-peer-deps
-
-  runTests:
-    name: Run tests suites, and upload coverage reports
-    needs: setup
-    runs-on: ubuntu-latest
-
-    steps:
       - name: Jest
         run: npm run ci:test
 
@@ -38,12 +31,14 @@ jobs:
   makeRelease:
     if: contains(github.event.head_commit.message, 'chore(release):')
     name: Make release
-    needs: setup
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+      - run: npm ci --legacy-peer-deps
       - name: Configure NPM
         run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
       
