--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
         "version-release": "release-it --ci --no-git.tag --no-npm.publish --no-github.release",
         "version-release:latest": "npm run version-release",
         "version-release:beta": "npm run version-release -- --preRelease=beta",
-        "publish": "release-it --ci --npm.skipChecks --no-increment",
-        "publish:latest": "npm run publish -- --git.requireBranch=main --github.autoGenerate",
-        "publish:beta": "npm run publish -- --git.requireBranch=beta --preRelease=beta --github.releaseNotes=\"echo\"",
+        "publish-release": "release-it --ci --npm.skipChecks --no-increment",
+        "publish-release:latest": "npm run publish-release -- --git.requireBranch=main --github.autoGenerate",
+        "publish-release:beta": "npm run publish-release -- --git.requireBranch=beta --preRelease=beta --github.releaseNotes=\"echo\"",
         "release:preview": "release-it --dry-run"
     },
     "devDependencies": {
